# Freecam

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  biome.jsonc  build.gradle  build.gradle.kts  crowdin.yaml  gradle.properties  jitpack.yml  libs.versions.toml  metadata.toml  package-lock.json  package.json  pyproject.toml  settings.gradle  settings.gradle.kts  shell.nix  stonecutter.gradle.kts  stonecutter.json5  stonecutter.properties.toml  stonecutter.settings.toml  stonecutter.versions.toml  tsconfig.json
ci/: README.md  build_matrix.py  lint_changelog.py  matrix_jobs.toml  package.json  publish_release.py  pyproject.toml  read_version.py  requirements.txt  test_build_matrix.py  test_lint_changelog.py  test_publish_release.py  test_read_version.py  tsconfig.json
ci/publish/: curseforge.py  github.py  load.py  models.py  modrinth.py  publisher.py  test_github.py  test_models.py
ci/src/: build_matrix.test.ts  build_matrix.ts  build_matrix_cli.ts  dev.ts  example.test.ts  fixtures.test.ts  lint_changelog.test.ts  lint_changelog.ts  matrix_model.test.ts  matrix_model.ts  project_files.ts  read_version.test.ts  read_version.ts  stonecutter_model.test.ts  stonecutter_model.ts
ci/src/freecam_ci/: build_matrix.py  dev.py  lint_changelog.py  matrix_model.py  (+3 more)
ci/test/: test_build_matrix.py  test_lint_changelog.py  test_matrix_model.py  test_read_version.py  test_stonecutter_model.py
ci/test_fixtures/: empty_version.toml  invalid_version.properties  invalid_versions.toml  missing_footer.md  missing_mod_table.toml  missing_version.toml  non_str_version.toml  ok_current_version.md  release_1.3.6.json  unreleased_after_release.md  valid_version.properties  valid_version.toml  valid_versions.toml
(+580 files in other folders)
