[project]
name = "freecam"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.3",
    "ruff>=0.15.6",
]
ci = ["freecam-ci"]

[tool.uv]
package = false

[tool.uv.sources]
freecam-ci = { workspace = true }

[tool.uv.workspace]
members = [
    "ci",
]
